<resources>
    <string name="app_name">WeatherApp</string>

    <string name="error_title">Oops!</string>
    <string name="error_message">There was an error.</string>
    <string name="error_ok_button_text">OK</string>
    <string name="network_unavailable_message">Network is unavailable!</string>
    <string name="network_data_received_message">Data is successfully received!</string>

    <string name="api_key">0477e00681642c3961f2e5621998ce85</string>
    <string name="url">https://api.darksky.net/forecast/%1$s/%2$s,%3$s</string>

    <string name="humidity_label_name">HUMIDITY</string>
    <string name="rainSnow_label_name">RAIN/SNOW?</string>
    <string name="time_label_text">At %1$s it will be</string>

    <string name="default_summary">Getting current data…</string>
    <string name="default_address_latitude">59.941607</string>
    <string name="default_address_longitude">30.467906</string>
    <string name="default_number_label">--</string>
    <string name="default_time_label">…</string>
    <string name="default_location_label">Saint-Petersburg</string>

    <string name="icon_image_view_content_desc">Icon for current weather</string>
    <string name="refresh_image_view_content_desc">Refresh button</string>
    <string name="degree_image_view_content_desc">Degree icon</string>
    <string name="circle_image_view_content_desc">Background for temperature</string>

    <string name="no_daily_forecast_data">There is no data to display.</string>
    <string name="this_week">This Week\'s Weather</string>
</resources>
