<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.arcmaksim.weatherapp.ui.activities.MainActivity"
    android:background="@drawable/bg_gradient">

    <TextView
        android:text="@string/default_number_label"
        android:textColor="@android:color/white"
        android:textSize="150sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/temperatureLabel"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:srcCompat="@mipmap/degree"
        android:layout_alignTop="@+id/temperatureLabel"
        android:layout_toRightOf="@+id/temperatureLabel"
        android:layout_toEndOf="@+id/temperatureLabel"
        android:id="@+id/degreeImageView"
        android:contentDescription="@string/degree_image_view_content_desc"/>

    <TextView
        android:text="@string/default_time_label"
        android:textSize="18sp"
        android:textColor="@color/semitransparentTextColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timeLabel"
        android:layout_above="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:text="@string/default_location_label"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:layout_marginBottom="60dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/timeLabel"
        android:layout_centerHorizontal="true"
        android:id="@+id/locationLabel"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/cloudy_night"
        android:layout_alignBottom="@+id/locationLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/iconImageView"
        android:contentDescription="@string/icon_image_view_content_desc"/>

    <LinearLayout
        android:id="@+id/mainLinearLayout"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:baselineAligned="false"
        android:layout_height="wrap_content"
        android:layout_below="@+id/temperatureLabel"
        android:layout_centerHorizontal="true"
        android:weightSum="100">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:text="@string/humidity_label_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidityLabel"
                android:textColor="@color/semitransparentTextColor"
                android:gravity="center_horizontal"/>

            <TextView
                android:text="@string/default_number_label"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/humidityValue"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <TextView
                android:text="@string/rainSnow_label_name"
                android:textColor="@color/semitransparentTextColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precipLabel"
                android:gravity="center_horizontal"/>

            <TextView
                android:text="@string/default_number_label"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/precipValue"
                android:gravity="center_horizontal"/>
        </LinearLayout>

    </LinearLayout>

    <TextView
        android:text="@string/default_summary"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/summaryLabel"
        android:layout_below="@id/mainLinearLayout"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/refresh"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/refreshImageView"
        android:contentDescription="@string/refresh_image_view_content_desc"/>

    <ProgressBar
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/refreshImageView"
        android:visibility="invisible"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:weightSum="100">

        <Button
            android:text="HOURLY"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:background="@color/semitransparentBackgroundColor"
            android:layout_height="wrap_content"
            android:id="@+id/hourlyButton"
            android:layout_weight="50"/>

        <Button
            android:layout_marginLeft="2dp"
            android:text="7 DAY"
            android:textColor="@android:color/white"
            android:layout_width="0dp"
            android:background="@color/semitransparentBackgroundColor"
            android:layout_height="wrap_content"
            android:id="@+id/dailyButton"
            android:layout_weight="50"/>
    </LinearLayout>

</RelativeLayout>
